[package]
name = "zero2prod_actix"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod_actix"

[dev-dependencies]
reqwest = "0.12"

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
